<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vista1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/vista1" />
        <item
            android:id="@+id/nav_vista2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/vista2" />
        <item
            android:id="@+id/nav_vista3"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/vista3" />
    </group>




</menu>
